landing pages open new tab, fixed grid-items, using web safe fonts, hid nav scrollbar

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -34,7 +34,7 @@
   left: -200px;
   top: 0;
   height: 100%;
-	overflow-y: scroll;
+	overflow-y: hidden;
 	overflow-x: visible;
 	transition: left 0.3s ease,
 				      box-shadow 0.3s ease;
@@ -50,7 +50,7 @@
      -moz-box-shadow: -8px 0 8px rgba(0,0,0,.5);
           box-shadow: -8px 0 8px rgba(0,0,0,.5);
   min-height: 100%;
-  width: 200px;
+  width: 382px;
   background: #1a1a1a;
 }
 
@@ -187,12 +187,13 @@ body {
   background-color: rgba(47,79,79, 0.8);
 
   font-size: 22px;
+  font-family: 'Verdana', serif;
   color: rgba(255,255,255, 0.8);
 }
 
 h2 {
   font-size: 48pt;
-  font-family: 'Crimson Text', serif;
+  font-family: 'Verdana', serif;
   margin-bottom: 20px;
   margin-top: 20px;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -212,10 +213,11 @@ h2 {
   grid-template-columns: auto;
   padding: 10px
   grid-template-columns: auto;
-  grid-template-rows: 10% 60% 20% 10%;
+  grid-template-rows: 10% 50% 30% 10%;
   align-content: center;
 }
 
 .grid-item {
   padding: 20px;
+  align-content: center;
 }
